[package]
name = "eta"
version = "0.1.1"
authors = ["Graham Plata <graham.plata@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.17.0"
clap = "3.0.0-beta.4"
rusqlite = "0.26.0"
solana-client = "1.7.0"
solana-account-decoder = "1.7.11"
solana-transaction-status = "1.7.10"