[package]
name = "eta"
version = "0.1.3"
authors = ["Graham Plata <graham.plata@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.17.0"
clap = "3.0.0-beta.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

solana-account-decoder = "1.7.3"
solana-client = "1.7.3"
solana-sdk = "1.7.3"
solana-transaction-status = "1.7.10"
solana-program = "1.7.11"

nft-candy-machine = { git = "https://github.com/metaplex-foundation/metaplex" }
spl-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex" }